@@ -2,21 +2,26 @@ package com.bakdata.conquery.models.query;
 
 import java.util.ArrayList;
 import java.util.Collections;
-import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
-import java.util.Map.Entry;
 import java.util.Set;
 import java.util.concurrent.atomic.AtomicInteger;
 import java.util.function.Consumer;
+import java.util.function.Predicate;
 import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
 import javax.ws.rs.core.UriBuilder;
 
 import c10n.C10N;
+import com.bakdata.conquery.apiv1.ExecutionStatus;
+import com.bakdata.conquery.apiv1.FullExecutionStatus;
+import com.bakdata.conquery.apiv1.query.Query;
 import com.bakdata.conquery.apiv1.query.QueryDescription;
-import com.bakdata.conquery.apiv1.query.IQuery;
+import com.bakdata.conquery.apiv1.query.SecondaryIdQuery;
+import com.bakdata.conquery.apiv1.query.concept.specific.CQConcept;
+import com.bakdata.conquery.apiv1.query.concept.specific.CQExternal;
+import com.bakdata.conquery.apiv1.query.concept.specific.CQReusedQuery;
 import com.bakdata.conquery.internationalization.CQElementC10n;
 import com.bakdata.conquery.io.cps.CPSType;
 import com.bakdata.conquery.io.storage.MetaStorage;
@@ -25,23 +30,16 @@ import com.bakdata.conquery.models.auth.permissions.Ability;
 import com.bakdata.conquery.models.config.ConqueryConfig;
 import com.bakdata.conquery.models.datasets.Dataset;
 import com.bakdata.conquery.models.execution.ExecutionState;
-import com.bakdata.conquery.apiv1.ExecutionStatus;
-import com.bakdata.conquery.apiv1.FullExecutionStatus;
 import com.bakdata.conquery.models.execution.ManagedExecution;
 import com.bakdata.conquery.models.externalservice.ResultType;
 import com.bakdata.conquery.models.i18n.I18n;
 import com.bakdata.conquery.models.identifiable.ids.NamespacedIdentifiable;
 import com.bakdata.conquery.models.identifiable.ids.specific.DatasetId;
-import com.bakdata.conquery.models.identifiable.ids.specific.ManagedExecutionId;
-import com.bakdata.conquery.apiv1.query.SecondaryIdQuery;
-import com.bakdata.conquery.apiv1.query.concept.specific.CQConcept;
-import com.bakdata.conquery.apiv1.query.concept.specific.CQExternal;
-import com.bakdata.conquery.apiv1.query.concept.specific.CQReusedQuery;
-import com.bakdata.conquery.models.query.queryplan.QueryPlan;
+import com.bakdata.conquery.models.messages.namespaces.WorkerMessage;
+import com.bakdata.conquery.models.messages.namespaces.specific.ExecuteQuery;
 import com.bakdata.conquery.models.query.resultinfo.ResultInfo;
 import com.bakdata.conquery.models.query.results.EntityResult;
 import com.bakdata.conquery.models.query.results.ShardResult;
-import com.bakdata.conquery.models.query.visitor.QueryVisitor;
 import com.bakdata.conquery.models.worker.DatasetRegistry;
 import com.bakdata.conquery.models.worker.Namespace;
 import com.bakdata.conquery.util.QueryUtils.NamespacedIdentifiableCollector;
@@ -67,8 +65,7 @@ public class ManagedQuery extends ManagedExecution<ShardResult> implements Singl
 	@JsonIgnore
 	protected transient Namespace namespace;
 	// Needs to be resolved externally before being executed
-	private IQuery query;
-
+	private Query query;
 	/**
 	 * The number of contained entities the last time this query was executed.
 	 */
@@ -85,7 +82,7 @@ public class ManagedQuery extends ManagedExecution<ShardResult> implements Singl
 	private transient List<ColumnDescriptor> columnDescriptions;
 
 
-	public ManagedQuery(IQuery query, User owner, Dataset submittedDataset) {
+	public ManagedQuery(Query query, User owner, Dataset submittedDataset) {
 		super(owner, submittedDataset);
 		this.query = query;
 	}
@@ -98,7 +95,7 @@ public class ManagedQuery extends ManagedExecution<ShardResult> implements Singl
 
 		involvedWorkers = namespace.getWorkers().size();
 
-		query.resolve(new QueryResolveContext(getDataset(), namespaces, config,null));
+		query.resolve(new QueryResolveContext(getDataset(), namespaces, config, null));
 	}
 
 	@Override
@@ -192,22 +189,6 @@ public class ManagedQuery extends ManagedExecution<ShardResult> implements Singl
 	}
 
 	@Override
-	public Map<ManagedExecutionId, QueryPlan> createQueryPlans(QueryPlanContext context) {
-		if (context.getDataset().equals(getDataset())) {
-			return Map.of(this.getId(), query.createQueryPlan(context));
-		}
-		log.trace("Did not create a QueryPlan for the query {} because the plan corresponds to dataset {} but the execution worker belongs to {}.", getId(), getDataset(), context.getDataset());
-		return Collections.emptyMap();
-	}
-
-	@Override
-	public ShardResult getInitializedShardResult(Entry<ManagedExecutionId, QueryPlan> entry) {
-		ShardResult result = new ShardResult();
-		result.setQueryId(getId());
-		return result;
-	}
-
-	@Override
 	public Set<Namespace> getRequiredDatasets() {
 		return Set.of(namespace);
 	}
@@ -227,17 +208,17 @@ public class ManagedQuery extends ManagedExecution<ShardResult> implements Singl
 	 * All further labels are dropped.
 	 */
 	@Override
-	protected void makeDefaultLabel(final StringBuilder sb, PrintSettings cfg) {
-		final Map<Class<? extends Visitable>, List<Visitable>> sortedContents = new HashMap<>();
+	protected String makeDefaultLabel(PrintSettings cfg) {
+		final StringBuilder sb = new StringBuilder();
+
+		final Map<Class<? extends Visitable>, List<Visitable>> sortedContents =
+				Visitable.stream(query)
+						 .collect(Collectors.groupingBy(Visitable::getClass));
 
 		int sbStartSize = sb.length();
 
-		QueryVisitor visitor = t -> sortedContents.computeIfAbsent(t.getClass(), (clazz) -> new ArrayList<>()).add(t);
-
-		query.visit(visitor);
-
 		// Check for CQExternal
-		List<Visitable> externals = sortedContents.computeIfAbsent(CQExternal.class, (clazz) -> List.of());
+		List<Visitable> externals = sortedContents.getOrDefault(CQExternal.class, Collections.emptyList());
 		if (!externals.isEmpty()) {
 			if (sb.length() > 0) {
 				sb.append(" ");
@@ -246,37 +227,55 @@ public class ManagedQuery extends ManagedExecution<ShardResult> implements Singl
 		}
 
 		// Check for CQReused
-		if (!sortedContents.computeIfAbsent(CQReusedQuery.class, (clazz) -> List.of()).isEmpty()) {
+		if (sortedContents.containsKey(CQReusedQuery.class)) {
 			if (sb.length() > 0) {
 				sb.append(" ");
 			}
 			sb.append(C10N.get(CQElementC10n.class, I18n.LOCALE.get()).reused());
 		}
 
+
 		// Check for CQConcept
-		final AtomicInteger length = new AtomicInteger();
-		String usedConcepts = sortedContents.computeIfAbsent(CQConcept.class, (clazz) -> List.of()).stream()
-											.map((CQConcept.class::cast))
-											.map(c -> makeLabelWithRootAndChild(c, cfg))
-											.distinct()
-											.filter((s) -> !Strings.isNullOrEmpty(s))
-											.takeWhile(elem -> length.addAndGet(elem.length()) < MAX_CONCEPT_LABEL_CONCAT_LENGTH)
-											.collect(Collectors.joining(" "));
+		if (sortedContents.containsKey(CQConcept.class)) {
+			if (sb.length() > 0) {
+				sb.append(" ");
+			}
+			// Track length of text we are appending for concepts.
+			final AtomicInteger length = new AtomicInteger();
 
-		if (sb.length() > 0 && !usedConcepts.isEmpty()) {
-			sb.append(" ");
-		}
-		sb.append(usedConcepts);
+			sortedContents.get(CQConcept.class)
+						  .stream()
+						  .map(CQConcept.class::cast)
 
-		// If not all Concept could be included in the name, point that out
-		if (length.get() > MAX_CONCEPT_LABEL_CONCAT_LENGTH) {
-			sb.append(" ").append(C10N.get(CQElementC10n.class, I18n.LOCALE.get()).furtherConcepts());
+						  .map(c -> makeLabelWithRootAndChild(c, cfg))
+						  .filter(Predicate.not(Strings::isNullOrEmpty))
+						  .distinct()
+
+						  .takeWhile(elem -> length.addAndGet(elem.length()) < MAX_CONCEPT_LABEL_CONCAT_LENGTH)
+						  .forEach(label -> sb.append(label).append(" "));
+
+			// Last entry will output one Space that we don't want
+			sb.deleteCharAt(sb.length() - 1);
+
+			// If not all Concept could be included in the name, point that out
+			if (length.get() > MAX_CONCEPT_LABEL_CONCAT_LENGTH) {
+				sb.append(" ").append(C10N.get(CQElementC10n.class, I18n.LOCALE.get()).furtherConcepts());
+			}
 		}
+
+
 
 		// Fallback to id if nothing could be extracted from the query description
 		if (sbStartSize == sb.length()) {
 			sb.append(getId().getExecution());
 		}
+
+		return sb.toString();
+	}
+
+	@Override
+	public WorkerMessage createExecutionMessage() {
+		return new ExecuteQuery(getId(), getQuery());
 	}
 
 	private static String makeLabelWithRootAndChild(CQConcept cqConcept, PrintSettings cfg) {
